Bug 140609: navigating menu bar with arrows is reversed when UI aligned to the right. r=dean_tessman@hotmail.com, sr=jst.